--- a/public/views/preferencesGlobal.html
+++ b/public/views/preferencesGlobal.html
@@ -40,7 +40,7 @@
     </ion-toggle>
   </div>
   <div class="m20t" ng-show="usePushNotifications && !PNEnabledByUser && isIOSApp">
-    <div class="text-left text-gray size-12 m10" translate>Push notifications for Copay are currently disabled. Enable them in the Settings app.</div>
+    <div class="text-left text-gray size-12 m10" translate>Push notifications for GroestlPay are currently disabled. Enable them in the Settings app.</div>
     <ul class="no-bullet m0" ng-click="openSettings()">
       <li ng-style="{'color':index.backgroundColor}" translate>Open Settings app</li>
     </ul>
@@ -48,7 +48,7 @@
   <ul class="no-bullet m0">
     <li href ui-sref="about">
       <i class="icon-arrow-right3 size-24 right text-gray"></i>
-      <div translate>About Copay</div>
+      <div translate>About GroestlPay</div>
     </li>
   </ul>
   <h4></h4>
