--- a/public/views/walletHome.html
+++ b/public/views/walletHome.html
@@ -274,7 +274,7 @@
           <div class="large-12 columns">
             <h2 class="text-center m10t" translate>My Groestlcoin address</h2>
             <div class="text-center" ng-click="home.copyToClipboard(home.addr, $event)" ng-show="home.addr || home.generatingAddress">
-              <qrcode size="220" data="Groestlcoin:{{home.addr}}"></qrcode>
+              <qrcode size="220" data="groestlcoin:{{home.addr}}"></qrcode>
               <div ng-show="home.generatingAddress" style="position:relative; top:-226px; height:0px">
                 <div style="height:220px; width:220px; margin:auto; background: white">
                   <ion-spinner class="spinner-stable" icon="lines" style="margin-top: 85px"></ion-spinner>
