--- a/public/views/preferencesInformation.html
+++ b/public/views/preferencesInformation.html
@@ -91,7 +91,7 @@
       <h4 class="title m0" translate>Extended Public Keys</h4>
       <li ng-repeat="pk in pubKeys" ng-click="copyToClipboard(pk)">
         <div class="row collapse">
-          <div class="small-4 columns">Copayer {{$index}}</div>
+          <div class="small-4 columns">Groestlpayer {{$index}}</div>
           <div class="small-8 columns oh text-gray">
             <div class="ellipsis enable_text_select">{{pk}}</div>
             <div class="size-12 text-right" ng-if="$index == 0">
