--- a/public/views/backup.html
+++ b/public/views/backup.html
@@ -187,9 +187,9 @@
             <div class="columns size-10 text-gray">
               <div class="p10t line-t">
                 <span translate>You can safely install your wallet on another device and use it from multiple devices at the same time.</span>
-                <a href="#" ng-click="$root.openExternalLink('https://github.com/bitpay/copay/blob/master/README.md#copay-backups-and-recovery')" translate>
+                <!-- a href="#" ng-click="$root.openExternalLink('https://github.com/bitpay/copay/blob/master/README.md#copay-backups-and-recovery')" translate>
                   Learn more about Copay backups
-                </a>
+                </a -->
               </div>
             </div>
           </div>
@@ -206,9 +206,9 @@
         <div class="columns size-10 text-gray extra-padding-bottom" ng-show="index.n==1">
           <div class="p10t line-t">
             <span translate>You can safely install your wallet on another device and use it from multiple devices at the same time.</span>
-            <a href="#" ng-click="$root.openExternalLink('https://github.com/bitpay/copay/blob/master/README.md#copay-backups-and-recovery')" translate>
+            <!-- a href="#" ng-click="$root.openExternalLink('https://github.com/bitpay/copay/blob/master/README.md#copay-backups-and-recovery')" translate>
               Learn more about Copay backups
-            </a>
+            </a -->
           </div>
         </div>
 
