--- a/public/views/create.html
+++ b/public/views/create.html
@@ -42,7 +42,7 @@
         </div>
         <div class="row" ng-show="totalCopayers != 1">
           <div class="large-6 medium-6 columns">
-            <label><span translate>Total number of copayers</span>
+            <label><span translate>Total number of Groestlpayers</span>
               <select class="m10t" ng-model="totalCopayers"
                 ng-options="totalCopayers as totalCopayers for totalCopayers in create.TCValues"
                 ng-change="create.setTotalCopayers(totalCopayers)">
@@ -133,11 +133,11 @@
                 <input type="text" class="form-control" name="derivationPath" ng-model="derivationPath">
               </label>
             </div>
-            <div class="oh" ng-show="create.seedSourceId == 'new'">
+            <!-- div class="oh" ng-show="create.seedSourceId == 'new'">
               <ion-toggle ng-model="testnetEnabled" toggle-class="toggle-balanced" class="bct">
                 <span class="toggle-label">Testnet</span>
               </ion-toggle>
-            </div>
+            </div -->
             <div class="oh">
               <ion-toggle ng-model="singleAddressEnabled" toggle-class="toggle-balanced" class="bct">
                 <div class="toggle-label">
