--- a/public/views/disclaimer.html
+++ b/public/views/disclaimer.html
@@ -2,7 +2,7 @@
   ng-controller="disclaimerController as disclaimer" ng-init="disclaimer.init()">
   <div class="row">
     <div class="medium-centered small-centered large-centered columns size-14">
-      <span class="text-bold text-white" translate>WELCOME TO GroestlPay</span>
+      <span class="text-bold text-white" translate>WELCOME TO GROESTLPAY</span>
       <p class="text-gray m0 text-light" translate>A multisignature Groestlcoin wallet</p>
     </div>
   </div>
