--- a/public/views/import.html
+++ b/public/views/import.html
@@ -7,15 +7,15 @@
 <div class="content p20b" ng-controller="importController" ng-init="type='12'">
   <div class="create-tab pr small-only-text-center" ng-hide="create.hideTabs">
     <div class="row">
-      <div class="tab-container small-4 medium-4 large-4" ng-class="{'selected': type =='12'}">
+      <div class="tab-container small-6 medium-6 large-6" ng-class="{'selected': type =='12'}">
         <a href ng-click="setType('12')" translate>Recovery Phrase</a>
       </div>
-      <div class="tab-container small-4 medium-4 large-4" ng-class="{'selected': type=='file'}">
+      <div class="tab-container small-6 medium-6 large-6" ng-class="{'selected': type=='file'}">
         <a href ng-click="setType('file')" translate>File/Text</a>
       </div>
-      <div class="tab-container small-4 medium-4 large-4" ng-class="{'selected': type=='hwWallet'}">
+      <!-- div class="tab-container small-4 medium-4 large-4" ng-class="{'selected': type=='hwWallet'}">
         <a href ng-click="setType('hwWallet')" translate>Hardware Wallet</a>
-      </div>
+      </div -->
     </div>
   </div>
 
@@ -86,11 +86,11 @@
                 <input type="text" id="bwsurl" name="bwsurl" ng-model="bwsurl">
               </label>
 
-              <div class="oh">
+              <!-- div class="oh">
                 <ion-toggle ng-model="testnetEnabled" ng-change="setDerivationPath()" toggle-class="toggle-balanced" class="bct">
                   <span class="toggle-label">Testnet</span>
                 </ion-toggle>
-              </div>
+              </div -->
             </div>
           </div>
 
