some more rebranding

--- a/public/views/preferences.html
+++ b/public/views/preferences.html
@@ -20,14 +20,14 @@
       <div translate>Alias</div>
     </li>
 
-    <li href ui-sref="preferencesEmail">
+    <!-- li href ui-sref="preferencesEmail">
       <div class="right text-gray">
         <span ng-if="!index.preferences.email" translate>Disabled</span>
         <span ng-if="index.preferences.email">{{index.preferences.email}}</span>
         <i class="icon-arrow-right3 size-24 right"></i>
       </div>
       <div translate>Email Notifications</div>
-    </li>
+    </li -->
 
     <li href ui-sref="preferencesColor">
       <div class="right text-gray">
