--- a/public/views/join.html
+++ b/public/views/join.html
@@ -71,11 +71,11 @@
               </label>
             </div>
 
-            <div ng-show="join.seedSourceId == 'trezor' || join.seedSourceId == 'ledger'">
+            <!-- div ng-show="join.seedSourceId == 'trezor' || join.seedSourceId == 'ledger'">
               <label class="oh"><span translate>Account Number</span>
                 <input type="number" id="account" ng-model="account" ignore-mouse-wheel>
               </label>
-            </div>
+            </div -->
 
             <div class="box-notification" ng-show="join.seedSourceId=='new' && createPassphrase">
               <span class="text-warning size-14">
