disable push notifications
This will crash gws if enabled when push notifications are not setup on gws

--- a/public/views/preferencesGlobal.html
+++ b/public/views/preferencesGlobal.html
@@ -34,7 +34,7 @@
     <span class="toggle-label" translate>Use Unconfirmed Funds</span>
   </ion-toggle>
 
-  <div ng-show="usePushNotifications && PNEnabledByUser">
+  <!-- div ng-show="usePushNotifications && PNEnabledByUser">
     <ion-toggle ng-model="pushNotifications" toggle-class="toggle-balanced" ng-change="pushNotificationsChange()">
       <span class="toggle-label" translate>Enable push notifications</span>
     </ion-toggle>
@@ -44,7 +44,7 @@
     <ul class="no-bullet m0" ng-click="openSettings()">
       <li ng-style="{'color':index.backgroundColor}" translate>Open Settings app</li>
     </ul>
-  </div>
+  </div -->
   <ul class="no-bullet m0">
     <li href ui-sref="about">
       <i class="icon-arrow-right3 size-24 right text-gray"></i>
