GWS instead of LWS

--- a/public/views/walletHome.html
+++ b/public/views/walletHome.html
@@ -99,7 +99,7 @@
               </span>
             </div>
             <div class="text-center text-gray m15r m15l" translate>
-              This wallet is not registered at the given Groestlcore Wallet Service (LWS). You can recreate it from the local information.
+              This wallet is not registered at the given Groestlcore Wallet Service (GWS). You can recreate it from the local information.
             </div>
             <div class="text-center m10t ">
               <span class="button outline round dark-gray tiny"
