--- a/public/views/buyAmazon.html
+++ b/public/views/buyAmazon.html
@@ -16,7 +16,7 @@
         </span>
         <div class="m10t size-12" ng-show="buy.errorInfo">
           There was an error when trying to buy gift card, but the funds were sent to BitPay Invoice. Please, contact
-          BitPay to refund your bitcoin
+          BitPay to refund your groestlcoin
           <div class="p10 m10t">
             Amount: {{buy.errorInfo.amount}} {{buy.errorInfo.currency}}<br>
             BitPay Invoice ID: {{buy.errorInfo.invoiceId}}.
