--- a/public/views/buyCoinbase.html
+++ b/public/views/buyCoinbase.html
@@ -81,7 +81,7 @@
           <label>Copay Wallet</label>
           <div class="input">
             <input type="text" id="address" name="address" ng-disabled="buy.selectedWalletId"
-            ng-attr-placeholder="{{'Choose a wallet to receive bitcoin'}}" ng-model="buy.selectedWalletName" required>
+            ng-attr-placeholder="{{'Choose a wallet to receive groestlcoin'}}" ng-model="buy.selectedWalletName" required>
             <a class="postfix size-12 m0 text-gray">
               <i class="icon-wallet size-18"></i>
             </a>
