--- a/public/views/buyGlidera.html
+++ b/public/views/buyGlidera.html
@@ -100,7 +100,7 @@
               type="submit" value="{{'Buy'}}" ng-disabled="buyForm.$invalid || buy.loading">
           </form>
           <p class="m10t size-12 text-gray">
-         Fiat will be immediately withdrawn from your bank account. The bitcoins will be purchased and deposited to your wallet ({{index.walletName}}) in 2-4 business days.
+         Fiat will be immediately withdrawn from your bank account. The groestlcoins will be purchased and deposited to your wallet ({{index.walletName}}) in 2-4 business days.
           </p>
         </div>
       </div>
@@ -112,7 +112,7 @@
       <div class="text-center" ng-show="buy.success">
         <h1>Purchase initiated</h1>
         <p class="text-gray">
-        A transfer has been initiated from your bank account. Your bitcoins should arrive to your wallet in 2-4 business days.
+        A transfer has been initiated from your bank account. Your groestlcoins should arrive to your wallet in 2-4 business days.
         </p>
 
         <button class="outline dark-gray round expand" href ui-sref="glidera">OK</button>
