--- a/public/views/modals/wallets.html
+++ b/public/views/modals/wallets.html
@@ -23,7 +23,7 @@
             <i class="fi-info size-18 m10r"></i>
           </div>
           <div class="size-10 m5t" ng-show="type == 'SELL'">
-            Notice: only 1-1 (single signature) wallets can be used to sell bitcoin
+            Notice: only 1-1 (single signature) wallets can be used to sell groestlcoin
           </div>
           <div class="size-10 m5t" ng-show="type == 'GIFT'">
             Notice: only 1-1 (single signature) wallets can be used to buy a gift card
