--- a/public/views/sellCoinbase.html
+++ b/public/views/sellCoinbase.html
@@ -103,7 +103,7 @@
         <div ng-show="showPriceSensitivity">
           <h1>Price Sensitivity</h1>
           <p class="size-14 text-gray">
-            Coinbase has not yet implemented an immediate method to sell bitcoin from a wallet. To make this sale, funds
+            Coinbase has not yet implemented an immediate method to sell groestlcoin from a wallet. To make this sale, funds
             will be sent to your Coinbase account, and sold when Coinbase accepts the transaction (usually one
             hour).
           </p>
@@ -138,7 +138,7 @@
     <div class="columns">
       <h1>Funds sent to Coinbase Account</h1>
       <p class="size-12 text-gray">
-        The transaction is not yet confirmed, and will show as "Processing" in your Activity. The bitcoin sale will be completed automatically once it is confirmed by Coinbase.
+        The transaction is not yet confirmed, and will show as "Processing" in your Activity. The groestlcoin sale will be completed automatically once it is confirmed by Coinbase.
       </p>
       <button class="m20t outline black round expand"
               ng-style="{'background-color': '#2b71b1'}"
