--- a/public/views/glidera.html
+++ b/public/views/glidera.html
@@ -49,10 +49,10 @@
 
         <p class="m20t text-gray size-12 text-left">
           DISCLOSURE.<br>
-          Glidera Inc. (Glidera) is providing the service of buying or selling bitcoins to Copay users.  To enable this
+          Glidera Inc. (Glidera) is providing the service of buying or selling groestlcoins to GroestlPay users.  To enable this
           service, Glidera has registered with US Treasury Department’s FinCEN as a Money Service Business
           (#31000042625755).  Users of Copay must agree to the service agreement presented by Glidera prior to obtaining
-          Glidera’s service of buying or selling bitcoins. Service available in U.S. and Canada only. In U.S. (buy & sell) CA, GA, IL, KS,
+          Glidera’s service of buying or selling groestlcoins. Service available in U.S. and Canada only. In U.S. (buy & sell) CA, GA, IL, KS,
           MA, MD, MO, MT, MN, SC, TX, AZ, CO, DE, ME, NJ, PA, TN, UT, NV, WI. In Canada (buy & sell) AB, BC, MB, NB, NL, NS, NT, NU,
           ON, PE, SK, YT.
         </p>
