Fix some missed translations

--- a/public/views/backup.html
+++ b/public/views/backup.html
@@ -39,8 +39,8 @@
           </span>:
           <div class="m10t columns size-14 text-gray">
             <span translate>Your wallet recovery phrase and access to the server that coordinated the initial wallet creation. You still need {{index.m}} keys to spend.</span>
-            <span translate><b>OR</b> the wallet recovery phrase of <b>all</b> copayers in the wallet</span>
-            <span translate><b>OR</b> 1 wallet export file and the remaining quorum of wallet recovery phrases (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet recovery phrases of any of the other copayers).</span>
+            <span translate><b>OR</b> the wallet recovery phrase of <b>all</b> groestlpayers in the wallet</span>
+            <span translate><b>OR</b> 1 wallet export file and the remaining quorum of wallet recovery phrases (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet recovery phrases of any of the other groestlpayers).</span>
           </div>
           </span>
         </div>
@@ -50,7 +50,7 @@
           </span>:
           <div class="m10t columns size-14 text-gray">
             <span translate>Your wallet recovery phrase and access to the server that coordinated the initial wallet creation. You still need {{index.m}} keys to spend.</span>
-            <span translate><b>OR</b> the wallet recovery phrases of <b>all</b> copayers in the wallet</span>
+            <span translate><b>OR</b> the wallet recovery phrases of <b>all</b> groestlpayers in the wallet</span>
           </div>
           </span>
         </div>
