--- a/public/views/create.html
+++ b/public/views/create.html
@@ -42,7 +42,7 @@
         </div>
         <div class="row" ng-show="totalCopayers != 1">
           <div class="large-6 medium-6 columns">
-            <label><span translate>Total number of Groestlpayers</span>
+            <label><span translate>Total number of groestlpayers</span>
               <select class="m10t" ng-model="totalCopayers"
                 ng-options="totalCopayers as totalCopayers for totalCopayers in create.TCValues"
                 ng-change="create.setTotalCopayers(totalCopayers)">
