--- a/public/views/preferencesInformation.html
+++ b/public/views/preferencesInformation.html
@@ -78,7 +78,7 @@
         </span>
       </li>
 
-      <h4 class="title m0" translate>GroestlPayers</h4>
+      <h4 class="title m0" translate>groestlpayers</h4>
       <li ng-repeat="copayer in index.copayers">
         <span class="size-12" ng-show="copayer.id == index.copayerId">
           <i class="icon-contact size-24 m10r"></i> {{copayer.name}} ({{'Me'|translate}}) <i class="fi-check m5 right"></i>
